# tools

./: .gitignore  README.md  flake.nix
fetch/: README.md  flake.nix  go.mod
lyricizer/: .ninja_log  Cargo.toml  README.md  build.ninja  flake.nix  lyricizer.toml.example
lyricizer/src/: main.c  main.rs  mpd.c  mpd.h  options.c  options.h  options.rs
