[package]
name = "lyricizer"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
log = "0.4.27"
mpd_client = "1.4.1"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["net", "rt-multi-thread", "time"] }
toml = "0.8.20"
url = "2.5.4"
